--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/ssr": "^17.3.3",
     "express": "^4.18.2",
     "firebase": "^10.10.0",
+    "firebasets": "^1.2.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
