--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^10.10.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "yarn": "^1.22.22",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
